syntax = "proto3";

package studentId;

option java_package = "shared.grpc.studentId.grpc";
option java_multiple_files = true;

service StudentIdService {
  rpc GetInternalIdByKeycloakId(KeycloakIdRequest) returns (InternalIdResponse);
}

message KeycloakIdRequest {
  string keycloak_id = 1;
}

message InternalIdResponse {
  int64 internal_id = 1;
}
